[package]
name = "nanno-migrator"
version = "0.1.0"
description = "A tool for migrating data from other vn manager to Galkeeper"
edition = "2021"
authors = ["Arimura Sena"]
license = "BAN-ZHINESE-USING"

[dependencies]
sea-orm = { version = "1.1.4", features = [
  "sqlx-sqlite",
  "runtime-tokio-native-tls",
  "macros",
] }
tokio = { version = "1.0", features = ["full"] }
roga = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
